# protoc-plugin-example

./: .bazelrc  .gitignore  MODULE.bazel  README.md  example.proto
src/: BUILD.bazel  PluginExample.java
